# misis2024s-hexoworld

./: .gitignore  CMakeLists.txt  CppProperties.json  README.md  fs_ocornut_imgui.bin.h  imgui_impl_bgfx.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  main.cpp  map_render.cpp  vs_ocornut_imgui.bin.h
app/: app.h
application/: CMakeLists.txt  application.cpp  application.hpp  frontend.cpp  workwithmap.cpp
bgfx/: CMakeLists.txt  rotating_cube.cpp
bigg/: CMakeLists.txt  bigg.hpp
bin.dbg/: hexagon_test.ilk
docs/: readme.md
examples/: CMakeLists.txt
examples/imgui_demo/: imgui_demo.cpp
hexoworld/: CMakeLists.txt  accessors.cpp  defines.hpp  drawers.cpp  hexagon_grid.cpp  hexagon_grid.hpp  hexoworld.cpp  hexoworld.hpp  includes.hpp  main_data.cpp  points.cpp  static_functions.cpp  static_variable.cpp  texture_grid.cpp  texture_grid.hpp
hexoworld/base_objects/hexagon/: drawers.cpp  frames.cpp  hexagon.cpp  hexagon.hpp
hexoworld/base_objects/rectangle/: drawers.cpp  frames.cpp  rectangle.cpp  rectangle.hpp
hexoworld/base_objects/triangle/: drawers.cpp  frames.cpp  triangle.cpp  triangle.hpp
hexoworld/cottage/: cottage.cpp  cottage.hpp  drawers.cpp  frames.cpp
hexoworld/hexagon/: drawers.cpp  frames.cpp  hexagon.cpp  hexagon.hpp
hexoworld/manager/: manager.cpp  manager.hpp
hexoworld/rectangle/: drawers.cpp  frames.cpp  rectangle.cpp  rectangle.hpp
hexoworld/triangle/: drawers.cpp  frames.cpp  triangle.cpp  triangle.hpp
hexoworld/wall/: drawers.cpp  frames.cpp  wall.cpp  wall.hpp
hexoworld/Новая папка/: hexoworld0.cpp  hexoworld0.hpp  hexoworld1.cpp  hexoworld1.hpp  hexoworld2.cpp  hexoworld2.hpp
opengl/: camera.h  shader_s.h
shaders/: 1_shader.fs  1_shader.vs  3.3.shader.fs  3.3.shader.geom  3.3.shader.vs
src/: CMakeLists.txt  hexagon.cpp
tests/: CMakeLists.txt  hexagon_test.cpp  hexoworld_viewer_libigl.cpp  vizualizator.cpp
